--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -4,10 +4,35 @@
   "lang.ukrainian": "Українська",
   "lang.polish": "Polski",
   "lang.russian": "Русский",
+
   "disclaimer.title": "Отказ от ответственности",
-  "disclaimer.text": "Приложение носит исключительно справочный и образовательный характер. Автор не гарантирует точность определения грибов и не несёт ответственности за последствия использования. Нажимая \"Принимаю\", вы соглашаетесь с этими условиями.",
+  "disclaimer.text": "Приложение носит образовательный характер. Точность определения грибов не гарантируется, ответственность не несем. Нажимая \"Принимаю\", вы соглашаетесь.",
   "disclaimer.accept": "Принимаю",
   "disclaimer.decline": "Отклонить",
-  "disclaimer.declineMsg": "Нам очень жаль, что приложение вам не подошло. Надеемся увидеть вас снова!",
+  "disclaimer.declineMsg": "Жаль, что приложение вам не подошло.",
+
+  "tabs.map": "Карта",
+  "tabs.catalog": "Справочник",
+  "tabs.danger": "Опасные",
+  "tabs.settings": "Настройки",
+
+  "map.title": "Карта",
+  "map.searchSpots": "Сохранённые места",
+  "map.addSpot": "Добавить",
+  "map.hideSpots": "Скрыть",
+  "map.showSpots": "Показать",
+  "map.zoomInToSee": "Приблизьте карту, чтобы увидеть места",
+
+  "catalog.title": "Справочник грибов",
+  "catalog.search": "Поиск грибов...",
+
+  "danger.title": "Опасные грибы региона",
+
+  "settings.title": "Настройки",
+  "settings.language": "Язык",
+  "settings.resetConsent": "Сбросить согласие",
+  "settings.spotsVisibility": "Показывать места по умолчанию",
+  "settings.haptics": "Тактильная отдача",
+
   "home.title": "Поисковик грибов"
 }
